# prompt-02/app.js
@@ -3,6 +3,7 @@ const userController = require('./controller/userController');
 const transferController = require('./controller/transferController');
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger.json');
+const authMiddleware = require('./middleware/authMiddleware');
 
 const app = express();
 app.use(express.json());
@@ -12,9 +13,9 @@ app.post('/register', userController.register);
 app.post('/login', userController.login);
 app.get('/users', userController.getUsers);
 
-// Rotas de transferência
-app.post('/transfer', transferController.transfer);
-app.get('/transfers', transferController.getTransfers);
+// Rotas de transferência protegidas
+app.post('/transfer', authMiddleware, transferController.transfer);
+app.get('/transfers', authMiddleware, transferController.getTransfers);
 
 // Swagger
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
